--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@
     background-color: royalblue;
 }
 /* --------------------- */
-
+span.red{
+    color: red;
+}
 
 
 /* --------------------- */
@@ -52,6 +54,11 @@ main{
     display: flex;
     align-items: flex-start;
 }
+h1{
+    text-align: center;
+    color: white;
+    margin-top: 20vh;
+}
 footer{
     width: 100%;
     height: auto;
@@ -63,9 +70,6 @@ footer{
 
     background-color: rgb(19, 21, 31);
     color: rgb(255, 255, 255);
-}
-#points{
-    color: rgb(160, 0, 0);
 }
 div#LeftContainer > img{
     width: 100%;
@@ -102,4 +106,11 @@ p{
 }
 #pointsTable{
     text-align: center;
+}
+div.author a{
+    text-decoration: none;
+    color: white;
+}
+div.author a:hover{
+    color: red;
 }
